+ Agregados en FrontEnd

--- a/FrontEnd/src/app/components/header/header.component.css
+++ b/FrontEnd/src/app/components/header/header.component.css
@@ -1,8 +1,8 @@
-div{
-    background-color: darkgray;
+div {
+    background-color: #ffbd59;
 }
 
 app-social{
     float:right;
-    margin-top:25px
+    margin-top:20px
 }
