--- a/FrontEnd/src/app/components/header/header.component.html
+++ b/FrontEnd/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-logo-ap></app-logo-ap>
+  <img style ="width: 150px;" src="../../../assets/APLogo.png" id="logoAP">
   <app-social></app-social>
   <app-banner></app-banner>
 </div>
