--- a/FrontEnd/src/app/components/education/education.component.html
+++ b/FrontEnd/src/app/components/education/education.component.html
@@ -1,10 +1,10 @@
 <div class="row">
-  <h1>Experiencia Laboral</h1>
+  <h1>Educacion</h1>
   <div class="col-lg-11">
     <ul>
       <li>
-        <h1>Educacion</h1>
-        <h3>-años</h3>
+        <h1>Escuela N° 4055 "Presbitero Constantino Spagnolo"</h1>
+        <h3>(2011 - 2016)</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque,
           adipisci modi. Atque eligendi quasi illo quos, quae debitis fugit
@@ -12,8 +12,8 @@
         </p>
       </li>
       <li>
-        <h1>Educacion</h1>
-        <h3>-años</h3>
+        <h1>Universidad de Mendoza</h1>
+        <h3>(2017 - 2020)</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque,
           adipisci modi. Atque eligendi quasi illo quos, quae debitis fugit
