--- a/FrontEnd/src/app/components/header/header.component.html
+++ b/FrontEnd/src/app/components/header/header.component.html
@@ -1,5 +1,4 @@
-<div>
-  <img style ="width: 150px;" src="../../../assets/APLogo.png" id="logoAP">
+<div class="row">
   <app-social></app-social>
   <app-banner></app-banner>
 </div>
