--- a/FrontEnd/src/app/components/banner/banner.component.html
+++ b/FrontEnd/src/app/components/banner/banner.component.html
@@ -1,3 +1,3 @@
-<div class="typewriter">
-  <h1>.........Bienvenidos a mi portfolio.</h1>
+<div class="line-1 anim-typewriter">
+  <h1>&lt;h1&gt;Bienvenidos a mi portfolio.&lt;/h1&gt;</h1>
 </div>
