--- a/FrontEnd/src/app/components/social/social.component.html
+++ b/FrontEnd/src/app/components/social/social.component.html
@@ -20,6 +20,6 @@
       target="_blank"
       ><img src="../../../assets/wpp.png" alt=""
     /></a>
-    <button type="button" class="btn btn-outline-light">Login</button>
+    <button type="button" class="btn btn-outline-light" (click)="login()">Login</button>
   </div>
 </div>
