--- a/FrontEnd/src/app/components/about-me/about-me.component.html
+++ b/FrontEnd/src/app/components/about-me/about-me.component.html
@@ -3,7 +3,7 @@
     <img src="../../../assets/me.png" class="img-fluid" id="mypic" />
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <p id="nombre">Sosa Gabriel</p>
+    <p id="nombre">hola {{persona.nombre}} {{persona.apellido}}</p>
     <p>Full Stack Developer Jr</p>
   </div>
   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 typewriter">
