--- a/FrontEnd/src/app/components/social/social.component.html
+++ b/FrontEnd/src/app/components/social/social.component.html
@@ -4,22 +4,38 @@
       <img style="width: 150px" src="../../../assets/APLogo.png" id="logoAP" />
     </div>
     <div class="social">
-    <a href="https://www.linkedin.com/in/gabisosa97/" target="_blank"
-      ><img src="../../../assets/linkedin.png" alt=""
-    /></a>
-    <a
-      href="https://github.com/Gabisosa97/ProyectoIntegrador_SosaGabriel"
-      target="_blank"
-      ><img src="../../../assets/github.png" alt=""
-    /></a>
-    <a href="https://www.instagram.com/gabisosa97/" target="_blank"
-      ><img src="../../../assets/instagram.png" alt=""
-    /></a>
-    <a
-      href="https://wa.me/5492634213316?text=Hola%20Gabriel,%20vi%20tu%20Curriculum%20y%20estoy%20interesado%20en%20contactarte.%20Saludos."
-      target="_blank"
-      ><img src="../../../assets/wpp.png" alt=""
-    /></a>
-    <button type="button" class="btn btn-outline-light" (click)="login()">Login</button>
+      <a href="https://www.linkedin.com/in/gabisosa97/" target="_blank"
+        ><img src="../../../assets/linkedin.png" alt=""
+      /></a>
+      <a
+        href="https://github.com/Gabisosa97/ProyectoIntegrador_SosaGabriel"
+        target="_blank"
+        ><img src="../../../assets/github.png" alt=""
+      /></a>
+      <a href="https://www.instagram.com/gabisosa97/" target="_blank"
+        ><img src="../../../assets/instagram.png" alt=""
+      /></a>
+      <a
+        href="https://wa.me/5492634213316?text=Hola%20Gabriel,%20vi%20tu%20Curriculum%20y%20estoy%20interesado%20en%20contactarte.%20Saludos."
+        target="_blank"
+        ><img src="../../../assets/wpp.png" alt=""
+      /></a>
+      <button
+        type="button"
+        class="btn btn-outline-light"
+        (click)="login()"
+        *ngIf="!isLogged"
+      >
+        Login
+      </button>
+      <button
+        type="button"
+        class="btn btn-outline-light"
+        (click)="onLogOut()"
+        *ngIf="isLogged"
+      >
+        Logout
+      </button>
+    </div>
   </div>
 </div>
