--- a/FrontEnd/src/app/components/experience/experience.component.html
+++ b/FrontEnd/src/app/components/experience/experience.component.html
@@ -1,21 +1,33 @@
 <div class="row">
   <h1>Experiencia Laboral</h1>
-  <div class="col-lg-11">
-    <ul>
-      <li>
-        <h1>Power Solution S.A</h1>
-        <h3>(Abril-Junio) (2022)</h3>
-        <p>
-          Salesforce y Apex
-        </p>
-      </li>
-      <li>
-        <h1>Daira IT Group</h1>
-        <h3>(Agosto-Presente) (2022) </h3>
-        <p>
-          Angular, SQL, Golang, Svelte y React.js
-        </p>
-      </li>
-    </ul>
+  <div class="col-lg-2">
+    <button
+      type="button"
+      class="btn btn-dark"
+      routerLink="/nuevaexp"
+      *ngIf="isLogged"
+    >
+      Nueva Experiencia
+    </button>
+  </div>
+  <div class="col-log-11">
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let xp of experiencia">
+          <td>{{ xp.titulo }}</td>
+          <td>{{ xp.descripcion }}</td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-light" routerLink="/editexp/{{ xp.id }}">
+              <i class="bi bi-pencil-fill"></i>Editar
+            </button>
+          </td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-danger" (click)="delete(xp.id)">
+              <i class="bi bi-pencil-fill"></i>Borrar
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
