--- a/FrontEnd/src/app/components/education/education.component.html
+++ b/FrontEnd/src/app/components/education/education.component.html
@@ -1,25 +1,36 @@
 <div class="row">
   <h1>Educacion</h1>
-  <div class="col-lg-11">
-    <ul>
-      <li>
-        <h1>Escuela N° 4055 "Presbitero Constantino Spagnolo"</h1>
-        <h3>(2011 - 2016)</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque,
-          adipisci modi. Atque eligendi quasi illo quos, quae debitis fugit
-          mollitia.
-        </p>
-      </li>
-      <li>
-        <h1>Universidad de Mendoza</h1>
-        <h3>(2017 - 2020)</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque,
-          adipisci modi. Atque eligendi quasi illo quos, quae debitis fugit
-          mollitia.
-        </p>
-      </li>
-    </ul>
+  <div class="col-lg-2">
+    <button
+      type="button"
+      class="btn btn-dark"
+      routerLink="/nuevaedu"
+      *ngIf="isLogged"
+    >
+      Nueva Educacion
+    </button>
+  </div>
+  <div class="col-log-11">
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let edu of educacion">
+          <td>{{ edu.titulo }}</td>
+          <td>{{ edu.descripcion }}</td>
+          <td *ngIf="isLogged">
+            <button
+              class="btn btn-light"
+              routerLink="/editedu/{{ edu.id }}"
+            >
+              <i class="bi bi-pencil-fill"></i>Editar
+            </button>
+          </td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-danger" (click)="delete(edu.id)">
+              <i class="bi bi-pencil-fill"></i>Borrar
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 </div>
