--- a/FrontEnd/src/app/components/about-me/about-me.component.html
+++ b/FrontEnd/src/app/components/about-me/about-me.component.html
@@ -1,22 +1,26 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <img src="../../../assets/me.png" class="img-fluid" id="mypic" />
+  <div class="col-lg-2">
+    <button
+      type="button"
+      class="btn btn-primary"
+      routerLink="/editaraboutme/3"
+      *ngIf="isLogged"
+    >
+      Editar Persona
+    </button>
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
+    <img src="{{ persona.img }}" class="img-fluid" id="mypic" />
+  </div>
+  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <p id="nombre">{{ persona.nombre }} {{ persona.apellido }}</p>
     <p>Full Stack Developer Jr</p>
   </div>
   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 typewriter">
     <span>
       <h1>Acerca de mi</h1>
       <p>
-        Soy técnico electrónico y programador junior eficiente y seguro con
-        experiencia en resolución de problemas de todo tipo a nivel tecnológico
-        e informático. Mi experiencia me ha ayudado a desarrollar habilidades
-        sociales para dar apoyo y ofrecer soluciones efectivas entre mis
-        compañeros de trabajo. Tengo conocimientos de metodologías agiles como
-        SCRUM y Kanban. Todos los días aprendo algo nuevo y siempre estoy
-        abierto a nuevas ideas y proyectos.
+        {{ persona.descripcion }}
       </p>
     </span>
   </div>
