--- a/FrontEnd/src/app/components/skills/skills.component.css
+++ b/FrontEnd/src/app/components/skills/skills.component.css
@@ -1,7 +1,13 @@
-.row{
-    padding: 20px;
+.row {
+  padding: 20px;
 }
 
-div{
-    background-color: #ffbd59;
+div {
+  background-color: #ffbd59;
+}
+
+.circulo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
