--- a/FrontEnd/src/app/components/skills/skills.component.html
+++ b/FrontEnd/src/app/components/skills/skills.component.html
@@ -1,11 +1,27 @@
 <div class="row">
   <h1>Hard Skills</h1>
-  <div class="col-sm-4 col-md4 col-lg-4">
+
+  <div class="col-lg-2">
+    <button
+      type="button"
+      class="btn btn-dark"
+      routerLink="/nuevaskill"
+      *ngIf="isLogged"
+    >
+      Nueva Skill
+    </button>
+  </div>
+
+  <div class="col-sm-4 col-md4 col-lg-4 circulo" *ngFor="let skill of skill">
     <circle-progress
-      [percent]="80"
+      [percent]="skill.porcentaje"
       [radius]="100"
-      [imageSrc]="'../../../assets/html.png'"
-      [showImage]="true"
+      [imageSrc]="''"
+      [title]="skill.nombre"
+      [titleColor]="'#345763'"
+      [showTitle]="true"
+      [showImage]="false"
+      [showUnits]="true"
       [imageHeight]="120"
       [imageWidth]="120"
       [outerStrokeWidth]="16"
@@ -15,86 +31,17 @@
       [animation]="true"
       [animationDuration]="600"
     ></circle-progress>
+    <div>
+      <td *ngIf="isLogged">
+        <button class="btn btn-light" routerLink="/editexp/{{ skill.id }}">
+          <i class="bi bi-pencil-fill"></i>Editar
+        </button>
+      </td>
+      <td *ngIf="isLogged">
+        <button class="btn btn-danger" (click)="delete(skill.id)">
+          <i class="bi bi-pencil-fill"></i>Borrar
+        </button>
+      </td>
+    </div>
   </div>
-  <div class="col-sm-4 col-md4 col-lg-4">
-    <circle-progress
-      [percent]="75"
-      [radius]="100"
-      [imageSrc]="'../../../assets/js.png'"
-      [showImage]="true"
-      [imageHeight]="120"
-      [imageWidth]="100"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="2"
-      [outerStrokeColor]="'#bc5426'"
-      [innerStrokeColor]="'#345763'"
-      [animation]="true"
-      [animationDuration]="600"
-    ></circle-progress>
-  </div>
-  <div class="col-sm-4 col-md4 col-lg-4">
-    <circle-progress
-      [percent]="65"
-      [radius]="100"
-      [imageSrc]="'../../../assets/CSS.png'"
-      
-      [showImage]="true"
-      [imageHeight]="130"
-      [imageWidth]="100"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="2"
-      [outerStrokeColor]="'#bc5426'"
-      [innerStrokeColor]="'#345763'"
-      [animation]="true"
-      [animationDuration]="600"
-    ></circle-progress>
-  </div>
-  <h1>Soft Skills</h1>
-  <div class="col-sm-4 col-md4 col-lg-4">
-    <circle-progress
-      [percent]="80"
-      [radius]="100"
-      [imageSrc]="'../../../assets/html.png'"
-      [showImage]="true"
-      [imageHeight]="120"
-      [imageWidth]="120"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="2"
-      [outerStrokeColor]="'#bc5426'"
-      [innerStrokeColor]="'#345763'"
-      [animation]="true"
-      [animationDuration]="600"
-    ></circle-progress>
-  </div>
-  <div class="col-sm-4 col-md4 col-lg-4">
-    <circle-progress
-      [percent]="75"
-      [radius]="100"
-      [imageSrc]="'../../../assets/js.png'"
-      [showImage]="true"
-      [imageHeight]="120"
-      [imageWidth]="120"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="2"
-      [outerStrokeColor]="'#bc5426'"
-      [innerStrokeColor]="'#345763'"
-      [animation]="true"
-      [animationDuration]="600"
-    ></circle-progress>
-  </div>
-  <div class="col-sm-4 col-md4 col-lg-4">
-    <circle-progress
-      [percent]="65"
-      [radius]="100"
-      [imageSrc]="'../../../assets/CSS.png'"
-      [showImage]="true"
-      [imageHeight]="120"
-      [imageWidth]="120"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="2"
-      [outerStrokeColor]="'#bc5426'"
-      [innerStrokeColor]="'#345763'"
-      [animation]="true"
-      [animationDuration]="600"
-    ></circle-progress>
 </div>
