--- a/FrontEnd/src/app/components/about-me/about-me.component.html
+++ b/FrontEnd/src/app/components/about-me/about-me.component.html
@@ -1,27 +1,28 @@
 <div class="row">
-  <div class="col-lg-2">
-    <button
-      type="button"
-      class="btn btn-primary"
-      routerLink="/editaraboutme/3"
-      *ngIf="isLogged"
-    >
-      Editar Persona
-    </button>
-  </div>
-  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-1">
     <img src="{{ persona.img }}" class="img-fluid" id="mypic" />
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
     <p id="nombre">{{ persona.nombre }} {{ persona.apellido }}</p>
     <p>Full Stack Developer Jr</p>
   </div>
-  <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 typewriter">
+  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 descripcion">
     <span>
       <h1>Acerca de mi</h1>
       <p>
         {{ persona.descripcion }}
       </p>
     </span>
+  </div>
+  <div class="col-lg-1">
+    <button
+      id="editar"
+      type="button"
+      class="btn btn-primary"
+      routerLink="/editabout/3"
+      *ngIf="isLogged"
+    >
+      <i class="bi bi-pencil-fill"></i> Editar Persona
+    </button>
   </div>
 </div>
