--- a/FrontEnd/src/app/components/education/education.component.html
+++ b/FrontEnd/src/app/components/education/education.component.html
@@ -17,16 +17,13 @@
           <td>{{ edu.titulo }}</td>
           <td>{{ edu.descripcion }}</td>
           <td *ngIf="isLogged">
-            <button
-              class="btn btn-light"
-              routerLink="/editedu/{{ edu.id }}"
-            >
+            <button class="btn btn-light" routerLink="/editedu/{{ edu.id }}">
               <i class="bi bi-pencil-fill"></i>Editar
             </button>
           </td>
           <td *ngIf="isLogged">
             <button class="btn btn-danger" (click)="delete(edu.id)">
-              <i class="bi bi-pencil-fill"></i>Borrar
+              <i class="bi bi-trash3"></i>Borrar
             </button>
           </td>
         </tr>
