--- a/FrontEnd/src/app/components/experience/experience.component.html
+++ b/FrontEnd/src/app/components/experience/experience.component.html
@@ -23,7 +23,7 @@
           </td>
           <td *ngIf="isLogged">
             <button class="btn btn-danger" (click)="delete(xp.id)">
-              <i class="bi bi-pencil-fill"></i>Borrar
+              <i class="bi bi-trash3"></i>Borrar
             </button>
           </td>
         </tr>
