--- a/FrontEnd/src/app/components/projects/edit-proyecto.component.html
+++ b/FrontEnd/src/app/components/projects/edit-proyecto.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="persona">
+<div class="container" *ngIf="proyecto">
   <div class="row">
     <div>
       <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
@@ -8,20 +8,8 @@
             type="text"
             class="form-control"
             id="nombre"
-            [(ngModel)]="persona.nombre"
+            [(ngModel)]="proyecto.nombre"
             name="nombre"
-            [ngModelOptions]="{ standalone: true }"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="apellido">Apellido</label>
-          <input
-            type="text"
-            class="form-control"
-            id="apellido"
-            [(ngModel)]="persona.apellido"
-            name="apellido"
             [ngModelOptions]="{ standalone: true }"
             required
           />
@@ -32,7 +20,7 @@
             type="text"
             class="form-control"
             id="descripcion"
-            [(ngModel)]="persona.descripcion"
+            [(ngModel)]="proyecto.descripcion"
             name="descripcion"
             [ngModelOptions]="{ standalone: true }"
             required
@@ -44,7 +32,7 @@
             type="file"
             class="form-control"
             id="img"
-            [(ngModel)]="persona.img"
+            [(ngModel)]="proyecto.img"
             (change)="uploadImage($event)"
             accept=".jpg, .png, .jpeg"
             name="img"
@@ -53,7 +41,7 @@
           />
         </div>
         <div class="imagen">
-          <img src="{{ imageService.url }}" width="200px"/>
+          <img src="{{ imageService.url }}" width="200px" />
         </div>
         <div>
           <button class="btn btn-primary">Editar</button>
