--- a/FrontEnd/src/app/components/projects/new-proyecto.component.html
+++ b/FrontEnd/src/app/components/projects/new-proyecto.component.html
@@ -1,33 +1,33 @@
-<div class="container" *ngIf="xpLab">
+<div class="container">
   <div class="row">
     <div>
-      <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
+      <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
         <div class="form-group">
-          <label for="titulo">Titulo de la Empresa</label>
+          <label for="nombre">Nombre</label>
           <input
             type="text"
             class="form-control"
-            id="titulo"
-            name="titulo"
-            [(ngModel)]="xpLab.titulo"
+            id="nombre"
+            [(ngModel)]="nombre"
+            name="nombre"
             [ngModelOptions]="{ standalone: true }"
             required
           />
         </div>
         <div class="form-group">
-          <label for="descripcion">Descripcion de la Empresa</label>
+          <label for="descripcion">Descripcion</label>
           <input
             type="text"
             class="form-control"
             id="descripcion"
-            [(ngModel)]="xpLab.descripcion"
+            [(ngModel)]="descripcion"
             name="descripcion"
             [ngModelOptions]="{ standalone: true }"
             required
           />
         </div>
         <div>
-          <button class="btn btn-primary">Actualizar</button>
+          <button class="btn btn-primary">Editar</button>
         </div>
       </form>
     </div>
