--- a/FrontEnd/src/app/components/social/social.component.html
+++ b/FrontEnd/src/app/components/social/social.component.html
@@ -1,8 +1,11 @@
 <div class="row">
   <div class="container">
-    <div class="logo">
-      <img style="width: 150px" src="../../../assets/APLogo.png" id="logoAP" />
-    </div>
+    <a
+      href="https://www.argentina.gob.ar/produccion/argentina-programa"
+      target="_blank"
+      ><img style="width: 150px" src="../../../assets/APLogo.png" id="logoAP"
+    /></a>
+    <div class="logo"></div>
     <div class="social">
       <a href="https://www.linkedin.com/in/gabisosa97/" target="_blank"
         ><img src="../../../assets/linkedin.png" alt=""
@@ -12,8 +15,8 @@
         target="_blank"
         ><img src="../../../assets/github.png" alt=""
       /></a>
-      <a href="https://www.instagram.com/gabisosa97/" target="_blank"
-        ><img src="../../../assets/instagram.png" alt=""
+      <a href="mailto:gabisosa97@gmail.com" target="_blank"
+        ><img src="../../../assets/gmail.png" alt=""
       /></a>
       <a
         href="https://wa.me/5492634213316?text=Hola%20Gabriel,%20vi%20tu%20Curriculum%20y%20estoy%20interesado%20en%20contactarte.%20Saludos."
