--- a/FrontEnd/src/app/components/about-me/about-me.component.html
+++ b/FrontEnd/src/app/components/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-1">
+  <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
     <img src="{{ persona.img }}" class="img-fluid" id="mypic" />
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
@@ -18,8 +18,8 @@
     <button
       id="editar"
       type="button"
-      class="btn btn-primary"
-      routerLink="/editabout/3"
+      class="btn btn-light"
+      routerLink="/editabout/1"
       *ngIf="isLogged"
     >
       <i class="bi bi-pencil-fill"></i> Editar Persona
