--- a/FrontEnd/src/app/components/projects/projects.component.html
+++ b/FrontEnd/src/app/components/projects/projects.component.html
@@ -10,13 +10,42 @@
       Nuevo Proyecto
     </button>
   </div>
-  <div class="contenedor">
+
+  <div class="col-log-11">
+    <table class="table">
+      <tbody>
+        <tr *ngFor="let pr of proyecto">
+          <td>{{ pr.nombre }}</td>
+          <td>{{ pr.descripcion }}</td>
+          <td>
+            <div
+              class="col-sm-12 col-md-3 col-lg-3 offset-md-3 offset-lg-3 pt2"
+            >
+              <img src="{{ pr.img }}" class="img-fluid img-project" />
+            </div>
+          </td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-light" routerLink="/editproyecto/{{ pr.id }}">
+              <i class="bi bi-pencil-fill"></i>Editar
+            </button>
+          </td>
+          <td *ngIf="isLogged">
+            <button class="btn btn-danger" (click)="delete(pr.id)">
+              <i class="bi bi-trash3"></i>Borrar
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <!-- <div class="contenedor">
     <div class="col-sm-12 col-md-7 col-lg-7 pt1" *ngFor="let xp of proyecto">
       <h1>{{ xp.nombre }}</h1>
       <p>
         {{ xp.descripcion }}
       </p>
-      <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 pt2">
+      <div class="col-sm-12 col-md-3 col-lg-3 offset-md-3 offset-lg-3 pt2">
         <img src="{{ xp.img }}" class="img-fluid img-project" />
       </div>
       <td *ngIf="isLogged">
@@ -30,5 +59,5 @@
         </button>
       </td>
     </div>
-  </div>
+  </div> -->
 </div>
