--- a/FrontEnd/src/app/components/social/social.component.html
+++ b/FrontEnd/src/app/components/social/social.component.html
@@ -3,8 +3,11 @@
     <a
       href="https://www.argentina.gob.ar/produccion/argentina-programa"
       target="_blank"
-      ><img style="width: 150px" src="../../../assets/APLogo.png" id="logoAP"
-    /></a>
+    >
+      <img src="../../../assets/argprog.png"  id="logoAPlg"/>
+      <img src="../../../assets/APLogo.png" id="logoAPsm" />
+    </a>
+
     <div class="logo"></div>
     <div class="social">
       <a href="https://www.linkedin.com/in/gabisosa97/" target="_blank"
