--- a/FrontEnd/src/app/components/education/edit-educacion.component.html
+++ b/FrontEnd/src/app/components/education/edit-educacion.component.html
@@ -3,7 +3,7 @@
     <div>
       <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
         <div class="form-group">
-          <label for="titulo">Titulo de la Empresa</label>
+          <label for="titulo">Titulo de educacion</label>
           <input
             type="text"
             class="form-control"
@@ -15,7 +15,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="descripcion">Descripcion de la Empresa</label>
+          <label for="descripcion">Descripcion de la educacion</label>
           <input
             type="text"
             class="form-control"
