--- a/FrontEnd/src/app/components/projects/edit-proyecto.component.html
+++ b/FrontEnd/src/app/components/projects/edit-proyecto.component.html
@@ -3,7 +3,7 @@
     <div>
       <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
         <div class="form-group">
-          <label for="nombre">Nombre</label>
+          <label for="nombre">Nombre de proyecto</label>
           <input
             type="text"
             class="form-control"
@@ -15,7 +15,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="descripcion">Descripcion</label>
+          <label for="descripcion">Descripcion de proyecto</label>
           <input
             type="text"
             class="form-control"
@@ -23,6 +23,17 @@
             [(ngModel)]="proyecto.descripcion"
             name="descripcion"
             [ngModelOptions]="{ standalone: true }"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="link">Enlace de proyecto</label>
+          <input
+            type="text"
+            class="form-control"
+            id="link"
+            [(ngModel)]="proyecto.link"
+            name="link"
             required
           />
         </div>
