--- a/FrontEnd/src/app/components/projects/new-proyecto.component.html
+++ b/FrontEnd/src/app/components/projects/new-proyecto.component.html
@@ -25,6 +25,17 @@
           />
         </div>
         <div class="form-group">
+          <label for="link">Enlace</label>
+          <input
+            type="text"
+            class="form-control"
+            id="link"
+            [(ngModel)]="link"
+            name="link"
+            required
+          />
+        </div>
+        <div class="form-group">
           <label for="img">Imagen</label>
           <input
             type="file"
