--- a/FrontEnd/src/app/components/skills/edit-skill.component.html
+++ b/FrontEnd/src/app/components/skills/edit-skill.component.html
@@ -3,7 +3,7 @@
     <div>
       <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
         <div class="form-group">
-          <label for="nombre">Titulo de la Empresa</label>
+          <label for="nombre">Nombre de Skill</label>
           <input
             type="text"
             class="form-control"
@@ -15,7 +15,7 @@
           />
         </div>
         <div class="form-group">
-          <label for="porcentaje">Descripcion de la Empresa</label>
+          <label for="porcentaje">Porcentaje de Skill</label>
           <input
             type="text"
             class="form-control"
