--- a/FrontEnd/src/app/components/skills/new-skill.component.html
+++ b/FrontEnd/src/app/components/skills/new-skill.component.html
@@ -3,7 +3,7 @@
       <div>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
           <div class="form-group">
-            <label for="titulo">Nueva Skill</label>
+            <label for="titulo">Nombre de Skill</label>
             <input
               type="text"
               class="form-control"
@@ -14,7 +14,7 @@
             />
           </div>
           <div class="form-group">
-            <label for="descripcion">Descripcion de la Skill</label>
+            <label for="descripcion">Descripcion de Skill</label>
             <input
               type="text"
               class="form-control"
