--- a/FrontEnd/src/app/components/social/social.component.css
+++ b/FrontEnd/src/app/components/social/social.component.css
@@ -1,13 +1,32 @@
-img{
-    width: 40px;
+@media (max-width: 575px) {
+  #logoAPlg {
+    display: none;
+  }
+  #logoAPsm {
+    width: 150px;
+  }
+}
+
+@media (min-width: 576px) {
+  #logoAPsm {
+    display: none;
+    
+  }
+  #logoAPlg {
+    width: 350px;
+  }
+}
+
+img {
+  width: 40px;
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
 }
 .btn {
-    margin-right: 0.5em;
+  margin-right: 0.5em;
 }
